tests/should_fail/bug/1544_2.stderr
error[E0277]: the trait bound `Base: creusot_std::model::DeepModel` is not satisfied
  --> 1544_2.rs:12:10
   |
12 | #[derive(PartialEq)]
   |          ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `creusot_std::model::DeepModel` is not implemented for `Base`
  --> 1544_2.rs:13:1
   |
13 | pub struct Base(i32);
   | ^^^^^^^^^^^^^^^
   = help: the following other types implement trait `creusot_std::model::DeepModel`:
             &T
             &mut T
             ()
             (A, Z, Y, X, W, V, U, T)
             (B, A, Z, Y, X, W, V, U, T)
             (C, B, A, Z, Y, X, W, V, U, T)
             (D, C, B, A, Z, Y, X, W, V, U, T)
             (E, D, C, B, A, Z, Y, X, W, V, U, T)
           and 42 others
   = note: required for `&Base` to implement `creusot_std::model::DeepModel`
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
